@@ -445,6 +445,77 @@ static int _set_rec(int *start, int argc, char *argv[],
 	return set;
 }
 
+static bool _isdefault(List qos_list)
+{
+	int rc = 0;
+	slurmdb_association_cond_t assoc_cond;
+	slurmdb_association_rec_t *assoc = NULL;
+	ListIterator itr;
+	List ret_list = NULL;
+	char *name = NULL;
+
+	if(!qos_list || !list_count(qos_list))
+		return rc;
+
+	/* this needs to happen before any removing takes place so we
+	   can figure out things correctly */
+	xassert(g_qos_list);
+
+	memset(&assoc_cond, 0, sizeof(slurmdb_association_cond_t));
+	assoc_cond.without_parent_info = 1;
+	assoc_cond.def_qos_id_list = list_create(slurm_destroy_char);
+
+	itr = list_iterator_create(qos_list);
+	while ((name = list_next(itr))) {
+		uint32_t id = str_2_slurmdb_qos(g_qos_list, name);
+		if(id == NO_VAL)
+			continue;
+		list_append(assoc_cond.def_qos_id_list,
+			    xstrdup_printf("%u", id));
+	}
+	list_iterator_destroy(itr);
+
+	ret_list = acct_storage_g_get_associations(
+		db_conn, my_uid, &assoc_cond);
+	list_destroy(assoc_cond.def_qos_id_list);
+
+	if(!ret_list || !list_count(ret_list))
+		goto end_it;
+
+	fprintf(stderr," Associations listed below have these "
+		"as their Default QOS.\n");
+	itr = list_iterator_create(ret_list);
+	while((assoc = list_next(itr))) {
+		name = slurmdb_qos_str(g_qos_list, assoc->def_qos_id);
+		if (!assoc->user) {
+			// see if this isn't a user
+			fprintf(stderr,
+				"  DefQOS = %-10s C = %-10s A = %-20s\n",
+				name, assoc->cluster, assoc->acct);
+		} else if (assoc->partition) {
+			// see if there is a partition name
+			fprintf(stderr,
+				"  DefQOS = %-10s C = %-10s A = %-20s "
+				"U = %-9s P = %s\n",
+				name, assoc->cluster, assoc->acct,
+				assoc->user, assoc->partition);
+		} else {
+			fprintf(stderr,
+				"  DefQOS = %-10s C = %-10s A = %-20s "
+				"U = %-9s\n",
+				name, assoc->cluster, assoc->acct, assoc->user);
+		}
+	}
+	list_iterator_destroy(itr);
+	rc = 1;
+end_it:
+	if(ret_list)
+		list_destroy(ret_list);
+
+	return rc;
+}
+
+
 extern int sacctmgr_add_qos(int argc, char *argv[])
 {
 	int rc = SLURM_SUCCESS;
@@ -905,6 +976,10 @@ extern int sacctmgr_delete_qos(int argc, char *argv[])
 		return SLURM_ERROR;
 	}
 
+	if (!g_qos_list)
+		g_qos_list = acct_storage_g_get_qos(
+			db_conn, my_uid, NULL);
+
 	notice_thread_init();
 	ret_list = acct_storage_g_remove_qos(db_conn, my_uid, qos_cond);
 	notice_thread_fini();
@@ -912,7 +987,25 @@ extern int sacctmgr_delete_qos(int argc, char *argv[])
 
 	if(ret_list && list_count(ret_list)) {
 		char *object = NULL;
-		ListIterator itr = list_iterator_create(ret_list);
+		ListIterator itr = NULL;
+
+		/* Check to see if person is trying to remove a default
+		 * qos of an association.  _isdefault only works with the
+		 * output from acct_storage_g_remove_qos, and
+		 * with a previously got g_qos_list.
+		 */
+		if (_isdefault(ret_list)) {
+			exit_code=1;
+			fprintf(stderr, " Please either remove the qos' listed "
+				"above from list and resubmit,\n"
+				" or change the default qos to "
+				"remove the qos.\n"
+				" Changes Discarded\n");
+			acct_storage_g_commit(db_conn, 0);
+			goto end_it;
+		}
+
+		itr = list_iterator_create(ret_list);
 		printf(" Deleting QOS(s)...\n");
 
 		while((object = list_next(itr))) {
@@ -934,6 +1027,7 @@ extern int sacctmgr_delete_qos(int argc, char *argv[])
 		rc = SLURM_ERROR;
 	}
 
+end_it:
 	if(ret_list)
 		list_destroy(ret_list);
 
