@@ -1828,13 +1828,18 @@ assoc_start:
 			char *object = NULL;
 			ListIterator itr;
 			set = 1;
+
 			if (assoc->def_qos_id != NO_VAL)
 				set = sacctmgr_check_default_qos(
 					     assoc->def_qos_id,
 					     user_cond->assoc_cond);
+			else if (assoc->qos_list)
+				set = sacctmgr_check_default_qos(
+					     -1, user_cond->assoc_cond);
+
 			if (set) {
 				itr = list_iterator_create(ret_list);
-				printf(" Modified account associations...\n");
+				printf(" Modified user associations...\n");
 				while((object = list_next(itr))) {
 					printf("  %s\n", object);
 				}
